# unofficial-fortimonitor-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  FORTIMONITOR_API_DOCS.md  FortiMonitor_MCP_Phase1_Implementation_REVISED.md  LICENSE  Phase1_Revision_Summary.md  README.md  REMAINING_WORK_INSTRUCTIONS.md  TODO.md  check_server.py  debug_api.py  docker-compose.share.yml  docker-compose.yml  fix_tool_definitions.py  fix_tool_definitions_final.py  fortimonitor_ai_index.json  pyproject.toml  requirements.txt  setup.py  test_config.py  test_connectivity.py  test_mcp.ps1  test_priority1.py  test_priority2.py  test_priority3.py  test_priority4.py  test_priority5.py  verify_server_status.py
.claude/: settings.local.json
.claude/agents/: marketing.md
.github/workflows/: docker-build.yml
data/: sources.yaml  workflows.yaml
docs/: DEVELOPER_GUIDE.md  PANOPTA_API_FIELD_REFERENCE.md  PROJECT_DETAIL.md  USER_GUIDE.md  WINDOWS_DEPLOYMENT.md  WINDOWS_SERVER_2025_INSTALL.md  generate_pdf.py
scripts/: build.bat  build.sh  ingest.py  push.sh  release.sh  test-container.bat  test-container.sh  validate_kb.py  validate_walkthroughs.py
src/: __init__.py  __main__.py  config.py  server.py
src/fortimonitor/: __init__.py  client.py  exceptions.py  models.py  schema.py
src/knowledge/: __init__.py
src/tools/: __init__.py  agent_resources.py  bulk_operations.py  cloud.py  compound_services.py  contacts_enhanced.py  countermeasures.py  dashboards.py  dem.py  fabric.py  license_utilization.py  maintenance_enhanced.py  metrics.py  monitoring_nodes.py  network_service_types.py  network_services.py  notifications.py  notifications_enhanced.py  onsight.py  outage_enhanced.py  outage_management.py  outages.py  reference_data.py  reporting.py  rotating_contacts.py  server_enhanced.py  (+9 more)
tests/: __init__.py  conftest.py  test_client.py  test_dict_tool_handlers.py  test_ingestion.py  test_knowledge_tools.py  test_license_utilization.py  test_registry.py  test_retrieval_quality.py  test_server.py  test_snmp_resources.py  test_tool_definitions.py  test_tools.py  test_webgui_crawler.py  test_webgui_differ.py  test_webgui_models.py  test_webgui_schema_store.py  test_webgui_server.py  test_webgui_tools.py  test_webgui_walkthrough.py  test_webgui_walkthroughs.py
(+38 files in other folders)
